# cryptoprice

./: Cargo.toml
.github/workflows/: release.yml
src/: main.rs
src/modules/: detail.rs  get_top.rs  mod.rs  search.rs
src/utils/: completions.rs  mod.rs  tools.rs
