[package]
name = "cryptoprice"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.6", features = ["derive"] }
clap_complete = "4.4.1"
color-print = "0.3.5"
config = "0.13.1"
tokio = { version = "1.15", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
scraper = "0.17.1"
serde_json = "1.0.107"
dialoguer = "0.11.0"
indicatif = "0.17.6"
sudo = "0.6.0"
system_shutdown = "4.0.1"
serde = "1.0.188"
dialog = "0.3.0"
